--- a/styles/base.css
+++ b/styles/base.css
@@ -3,6 +3,7 @@
 body {
   background: black;
   color: red;
+  font-family: 'Merienda One', cursive;
   font-weight: 300;
   font-size: 16px;
   letter-spacing: .025rem;
