--- a/styles/base.css
+++ b/styles/base.css
@@ -74,7 +74,7 @@ iframe {
 .banner {
   min-height: 25vh;
   padding: 5rem 1rem; 
-  background-image:url('../Inkedwoman-wearing-make-up-and-black-contact-lens-3414766_LI.jpg')
+  background-image: url('../Inkedwoman-wearing-make-up-and-black-contact-lens-3414766_LI.jpg');
   background-position: center;
 }
   
