--- a/styles/base.css
+++ b/styles/base.css
@@ -83,7 +83,7 @@ iframe {
     padding: 3rem;
     text-align: center
       color: red;
-    fount size: 3.5rem;
+    fount-size: 3.5rem;
 
 .profile-img{
   max-height: 50vh;
